--- a/app/src/main/res/layout/savings_fragment.xml
+++ b/app/src/main/res/layout/savings_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/aspire_cream_background"
-    tools:context=".SavingsFragment">
+    tools:context=".ui.savings.SavingsActivity">
 
     <com.example.app.ui.customeview.AppBarView
         android:id="@+id/app_bar"
@@ -14,7 +14,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
-
 
     <ScrollView
         android:layout_width="0dp"
@@ -104,6 +103,7 @@
                         android:textSize="14sp" />
 
                     <GridLayout
+                        android:id="@+id/grid_terms"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:columnCount="2"
@@ -214,15 +214,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        app:boxBackgroundColor="#EEEEEE"> <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/adamina"
-                        android:hint="0 VND"
-                        android:inputType="numberDecimal"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:textColor="@color/aspire_dark_text" />
+                        app:boxBackgroundColor="#EEEEEE">
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/et_savings_amount"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/adamina"
+                            android:hint="0 VND"
+                            android:inputType="numberDecimal"
+                            android:paddingTop="10dp"
+                            android:paddingBottom="10dp"
+                            android:textColor="@color/aspire_dark_text" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <LinearLayout
@@ -275,6 +277,7 @@
                         android:orientation="horizontal">
 
                         <Button
+                            android:id="@+id/btn_5m"
                             android:layout_width="0dp"
                             android:layout_height="36dp"
                             android:layout_weight="1"
@@ -285,6 +288,7 @@
                             android:fontFamily="@font/adamina"
                             style="@style/Widget.MaterialComponents.Button.TextButton"/>
                         <Button
+                            android:id="@+id/btn_10m"
                             android:layout_width="0dp"
                             android:layout_height="36dp"
                             android:layout_weight="1"
@@ -295,6 +299,7 @@
                             android:fontFamily="@font/adamina"
                             style="@style/Widget.MaterialComponents.Button.TextButton"/>
                         <Button
+                            android:id="@+id/btn_50m"
                             android:layout_width="0dp"
                             android:layout_height="36dp"
                             android:layout_weight="1"
@@ -340,12 +345,14 @@
                             android:fontFamily="@font/adamina"
                             android:textColor="@color/aspire_dark_text"/>
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="12dp"
                         android:orientation="horizontal">
                         <TextView
+                            android:id="@+id/tv_term_value"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -353,6 +360,7 @@
                             android:fontFamily="@font/adamina"
                             android:textColor="@color/aspire_orange_primary"/>
                         <TextView
+                            android:id="@+id/tv_rate_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="3.5%/năm"
@@ -375,12 +383,14 @@
                             android:fontFamily="@font/adamina"
                             android:textColor="@color/aspire_dark_text"/>
                         <TextView
+                            android:id="@+id/tv_principal_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="10.000.000 đ"
                             android:fontFamily="@font/adamina"
                             android:textColor="@color/aspire_dark_text"/>
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -394,6 +404,7 @@
                             android:fontFamily="@font/adamina"
                             android:textColor="@color/aspire_dark_text"/>
                         <TextView
+                            android:id="@+id/tv_interest_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="+29.167 đ"
@@ -415,6 +426,7 @@
                             android:fontFamily="@font/adamina"
                             android:textColor="@color/aspire_dark_text"/>
                         <TextView
+                            android:id="@+id/tv_total_value"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="10.029.167 đ"
@@ -423,6 +435,7 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/tv_note"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
