--- a/app/src/main/res/layout/savings_fragment.xml
+++ b/app/src/main/res/layout/savings_fragment.xml
@@ -46,6 +46,7 @@
                     android:padding="16dp">
 
                     <TextView
+                        android:id="@+id/tv_screen_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/adamina"
