--- a/app/src/main/res/layout/register_auth_success.xml
+++ b/app/src/main/res/layout/register_auth_success.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/aspire_cream_background"
-    tools:context=".AuthSuccessActivity">
+    tools:context=".ui.register.RegisterSuccessActivity">
 
     <ImageView
         android:id="@+id/img_logo"
@@ -90,7 +90,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_card_title" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_login"
+                android:id="@+id/btn_back_to_login"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
