--- a/app/src/main/res/layout/savings_fragment.xml
+++ b/app/src/main/res/layout/savings_fragment.xml
@@ -21,7 +21,7 @@
         android:clipToPadding="false"
         android:paddingBottom="100dp"
         android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/nav_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar">
@@ -61,6 +61,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/tv_source_account"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -70,6 +71,7 @@
                             android:textSize="16sp" />
 
                         <TextView
+                            android:id="@+id/tv_source_balance"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/adamina"
